<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Glympse Cards Demo</string>
    <string name="loading">Loading</string>
    <string name="phone_number">Phone number with country code. ex: 1 555-123-1234</string>
    <string name="phone_number_hint">1 555-123-1234</string>
    <string name="confirmation_code">Confirmation code</string>
    <string name="confirmation_code_hint">123456</string>
    <string name="submit">Submit</string>
    <string name="invalid_number">Invalid phone number</string>
    <string name="invalid_code">Invalid code</string>
    <string name="create_a_card">Create a new card</string>
    <string name="name_card">Set a name for the card</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="members">Members</string>
    <string name="invites">Invites</string>
    <string name="objects">Objects</string>
    <string name="activity">Activity</string>
    <string name="send_invite">Send invite</string>
    <string name="leave_card">Leave card</string>
    <string name="kick_members">Kick members</string>
    <string name="share_location">Share location</string>
    <string name="request_location">Request location</string>
    <string name="confirm_leave_card">Are you sure you want to leave this card?</string>
    <string name="select_members">Select members</string>
    <string name="select_members_or_request_all">Select members or Request from all</string>
    <string name="enter_number_to_invite">Enter phone number for the recipient</string>
    <string name="confirm_share">Share to this card for 5 minutes?</string>
    <string name="request_from_members">Request from members</string>
    <string name="request_all">Request all</string>
    <string name="create_poi">Create POI</string>
    <string name="select_place">Select a place</string>
</resources>